# sandbox

./: .gitignore  CMakeLists.txt  Makefile  no_terminal.txt  zip.py
include/: particles.h
src/: main.c
